[gd_scene load_steps=9 format=3 uid="uid://b5elambvpjdk3"]

[ext_resource type="Script" path="res://UI/Menues/Skripts/pause_menu.gd" id="1_6cegj"]
[ext_resource type="FontFile" uid="uid://c0ij43l2fym11" path="res://UI/Images/Pixellari.ttf" id="2_5n084"]
[ext_resource type="Texture2D" uid="uid://bryejuohsdw34" path="res://UI/Images/Background.png" id="2_hxty5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ntu06"]
texture = ExtResource("2_hxty5")
modulate_color = Color(0.572549, 0.572549, 0.572549, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tfa3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qib7c"]
bg_color = Color(0.756863, 0.631373, 0.458824, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kigma"]
bg_color = Color(0.564706, 0.454902, 0.298039, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k6ik"]
bg_color = Color(0.909804, 0.831373, 0.72549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cegj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.317085, 0.319973, 0.306646, 1)

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ntu06")

[node name="Label" type="Label" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -161.0
offset_right = 117.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.764706, 0.545098, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("2_5n084")
theme_override_font_sizes/font_size = 75
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -11.0
offset_right = 105.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_0tfa3")
theme_override_styles/hover = SubResource("StyleBoxFlat_qib7c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kigma")
theme_override_styles/normal = SubResource("StyleBoxFlat_0k6ik")
text = "Resume
"

[node name="QuitGame" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_0tfa3")
theme_override_styles/hover = SubResource("StyleBoxFlat_qib7c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kigma")
theme_override_styles/normal = SubResource("StyleBoxFlat_0k6ik")
text = "Quit game"

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -101.0
offset_right = 361.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.66908, 0.580888, 0.35169, 1)
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ColorRect/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
